--- a/machine_learning/tutorial/tut_2/ensembles-evaluation.ipynb
+++ b/machine_learning/tutorial/tut_2/ensembles-evaluation.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8be3c884",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d9be3281",
    "metadata": {},
    "outputs": [],
@@ -91,12 +91,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "1bd97ed9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>artists</th>\n",
+       "      <th>album_name</th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>explicit</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>time_signature</th>\n",
+       "      <th>track_genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>67hiQr5yocRHh4fheSEzsC</td>\n",
+       "      <td>0.358</td>\n",
+       "      <td>0.363</td>\n",
+       "      <td>0.0288</td>\n",
+       "      <td>0.822</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.3690</td>\n",
+       "      <td>0.229</td>\n",
+       "      <td>Seiko Matsuda</td>\n",
+       "      <td>My Prelude</td>\n",
+       "      <td>いくつの夜明けを数えたら</td>\n",
+       "      <td>27</td>\n",
+       "      <td>303626</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-7.236</td>\n",
+       "      <td>1</td>\n",
+       "      <td>134.649</td>\n",
+       "      <td>4</td>\n",
+       "      <td>j-idol</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7aUuoq4oMfLxaLa5GVUDHi</td>\n",
+       "      <td>0.590</td>\n",
+       "      <td>0.578</td>\n",
+       "      <td>0.0528</td>\n",
+       "      <td>0.612</td>\n",
+       "      <td>0.000162</td>\n",
+       "      <td>0.0837</td>\n",
+       "      <td>0.264</td>\n",
+       "      <td>KALEO</td>\n",
+       "      <td>Way down We Go</td>\n",
+       "      <td>Way down We Go</td>\n",
+       "      <td>64</td>\n",
+       "      <td>219560</td>\n",
+       "      <td>False</td>\n",
+       "      <td>10</td>\n",
+       "      <td>-5.798</td>\n",
+       "      <td>0</td>\n",
+       "      <td>81.663</td>\n",
+       "      <td>4</td>\n",
+       "      <td>alt-rock</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 track_id  danceability  energy  speechiness  acousticness  \\\n",
+       "0  67hiQr5yocRHh4fheSEzsC         0.358   0.363       0.0288         0.822   \n",
+       "1  7aUuoq4oMfLxaLa5GVUDHi         0.590   0.578       0.0528         0.612   \n",
+       "\n",
+       "   instrumentalness  liveness  valence        artists      album_name  \\\n",
+       "0          0.000000    0.3690    0.229  Seiko Matsuda      My Prelude   \n",
+       "1          0.000162    0.0837    0.264          KALEO  Way down We Go   \n",
+       "\n",
+       "       track_name  popularity  duration_ms  explicit  key  loudness  mode  \\\n",
+       "0    いくつの夜明けを数えたら          27       303626     False    3    -7.236     1   \n",
+       "1  Way down We Go          64       219560     False   10    -5.798     0   \n",
+       "\n",
+       "     tempo  time_signature track_genre  \n",
+       "0  134.649               4      j-idol  \n",
+       "1   81.663               4    alt-rock  "
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "spotify_1 = pd.read_csv('spotify-1.csv')\n",
+    "spotify_2 = pd.read_csv('spotify-2.csv')\n",
+    "\n",
+    "spotify_data = pd.merge(spotify_1, spotify_2, on = 'track_id', how='left')\n",
+    "spotify_data.head(2)\n",
+    "\n"
    ]
   },
   {
@@ -115,23 +238,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "65f12a87",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(28717, 20)\n",
+      "                 track_id                       artists           album_name  \\\n",
+      "0  0Yr1TfeacyGFyDe0aWDla9  Étienne Daho;Italoconnection              Virus X   \n",
+      "1  0oOZgg5OXE9ojXfldt4h4P                 Mickie Krause  Finger Im Po Mexiko   \n",
+      "\n",
+      "                           track_name popularity  duration_ms  explicit  \\\n",
+      "0  Virus X - SAGE Rework - radio edit         32       165386         0   \n",
+      "1             Laudato Si - DJ Version         25       216093         0   \n",
+      "\n",
+      "   danceability  energy  key  loudness  mode  speechiness  acousticness  \\\n",
+      "0         0.706   0.766    7    -6.055     0       0.0792       0.00513   \n",
+      "1         0.655   0.921    0    -4.415     1       0.0452       0.12500   \n",
+      "\n",
+      "   instrumentalness  liveness  valence    tempo  time_signature track_genre  \n",
+      "0            0.0192     0.199    0.661  101.999               4      french  \n",
+      "1            0.0000     0.227    0.842  135.067               4       party  \n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "spotify_3 = pd.read_parquet('spotify-3.parquet')\n",
+    "print(spotify_3.shape)\n",
+    "print(spotify_3.head(2))\n",
+    "\n",
+    "# Ensure consistent dtypes\n",
+    "spotify_3['popularity'] = spotify_3['popularity'].astype(int)\n",
+    "spotify_3['explicit'] = spotify_3['explicit'].astype(bool)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
+   "id": "701d2d9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(71792, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "spotify_data = pd.concat([spotify_data, spotify_3], axis = 0, join = 'inner')\n",
+    "print(spotify_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "id": "c01c11b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert df[\"popularity\"].dtype == int\n",
-    "assert df[\"explicit\"].dtype == bool"
+    "assert spotify_3[\"popularity\"].dtype == int\n",
+    "assert spotify_3[\"explicit\"].dtype == bool"
    ]
   },
   {
@@ -147,9 +319,38 @@
    "execution_count": null,
    "id": "d9464d0c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 track_id  danceability  energy  speechiness  acousticness  \\\n",
+      "0  67hiQr5yocRHh4fheSEzsC         0.358   0.363       0.0288         0.822   \n",
+      "\n",
+      "   instrumentalness  liveness  valence  popularity  duration_ms  explicit  \\\n",
+      "0               0.0     0.369    0.229          27       303626     False   \n",
+      "\n",
+      "   key  loudness  mode    tempo  time_signature track_genre  \n",
+      "0    3    -7.236     1  134.649               4      j-idol  \n",
+      "bool\n",
+      "[False  True]\n",
+      "                 track_id  danceability  energy  speechiness  acousticness  \\\n",
+      "0  67hiQr5yocRHh4fheSEzsC         0.358   0.363       0.0288         0.822   \n",
+      "\n",
+      "   instrumentalness  liveness  valence  popularity  duration_ms  explicit  \\\n",
+      "0               0.0     0.369    0.229          27       303626     False   \n",
+      "\n",
+      "   key  loudness  mode    tempo  time_signature track_genre  \n",
+      "0    3    -7.236     1  134.649               4      j-idol  \n",
+      "(71792, 17)\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "#dropping columns with string inputs that would likely skew outcome of id3\n",
+    "spotify_data = spotify_data.drop(columns = ['artists', 'album_name', 'track_name', ])\n",
+    "\n"
    ]
   },
   {
@@ -162,6 +363,34 @@
     "In most cases, you will do just fine with using ``Scikit-Learn``'s ``train_test_split`` (or later: ``PyTorch``'s ``random_split``). However, there are some edge cases where you have to handle splitting yourself, so this task teaches you the basics of how to go about this: _Index Lists_.\n",
     "\n",
     "Essentially, the goal is to list all indices of your data, shuffle that list, and then simply divide it into size-based chunks! In this next cell, write your own function which takes an ``ArrayLike`` object and a list of fractions (i.e. ``float``s) as input and returns a list of ``ArrayLike`` objects of the same lengths as the fraction list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b87e4c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here\n",
+    "def split_array(data : ArrayLike, frac: list[float]):\n",
+    "    if not np.isclose(sum(frac), 1):\n",
+    "        raise ValueError(f\"frac must sum up to one (roughly)\")\n",
+    "    \n",
+    "    data_size = len(data)\n",
+    "    random_indices = np.random.permutation(len(data))\n",
+    "\n",
+    "    output_data = []\n",
+    "\n",
+    "    for i in frac:\n",
+    "        size = int(data_size * i)\n",
+    "        data_indices = random_indices[:size]\n",
+    "        random_indices = random_indices[size:]\n",
+    "        output_data.append(data.iloc[data_indices])\n",
+    "\n",
+    "\n",
+    "    return output_data\n",
+    "        \n"
    ]
   },
   {
@@ -403,7 +632,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml2526",
+   "display_name": "ens-eval",
    "language": "python",
    "name": "python3"
   },
@@ -417,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
