--- a/python/machine_learning/tutorial_1/simple-trees.ipynb
+++ b/python/machine_learning/tutorial_1/simple-trees.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **KogSys-ML-B Introduction to Machine Learning**\n",
+    "<!-- # **KogSys-ML-B Introduction to Machine Learning**\n",
     "## **Decision Trees in Scikit Learn**\n",
-    "---"
+    "--- -->"
    ]
   },
   {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
